st-0.111